src/App.css
.page {
  margin-left: 2px;
  display: flex;
  flex-direction: row;
  height: 100vh;
}

.left-container {
  flex-direction: column;
  display: flex;

  flex-grow: 1;
  min-width: 330px;
  max-width: 330px;
}
.sidebar-container {
  flex-direction: column;
  display: flex;
  overflow: hidden;
  overflow-y: auto;
}

.right-container {
  display: flex;
  flex-direction: column;
  margin-top: 3px;
  margin-right: 3px;
  flex-grow: 1;
}

.top-container {
  display: flex;
  flex-direction: row;
}

.inspectedByContainer {
  flex-grow: 1;
  position: sticky;
  top: 0;
  background: rgba(255, 255, 255, 1);
  padding-bottom: 3px;
  min-height: 627px;
}
.inspectedByContainer > img {
  margin-top: 3px;
  height: auto;
}

.instagram-media {
  margin: 0 !important;
}
/* .overlay {
  position: absolute;
  z-index: 2;
  width: 1px;
  height: 1px;
  opacity: 1;
  pointer-events: auto;
  top: 1.55em;
} */

.map-container {
  height: 470.6px;
}

.mobile-inspectedByContainer {
  display: none;
  visibility: hidden;
}

.mapboxgl-popup-content {
  color: #1a1818;
}

.popup-content {
  display: flex;
  flex-direction: column;
}

#popup-name {
  font-weight: bold;
  font-size: 1em;
}

#popup-address {
  font-size: 0.8em;
}

.video-container {
  flex-grow: 1;
  min-width: 320px;
  height: auto;
}

.mapMarkerStyle {
  width: 50px;
  height: auto;
  cursor: pointer;
  transition: all 0.2s ease-in-out;
}

.mapMarkerStyleHovered {
  transform: scale(1.3) translateZ(0);
  background-color: rgba(0, 0, 0, 0) !important;
  backface-visibility: hidden;
}

.bottom-container {
  display: flex;
  flex-direction: row;
}
.icon-attribution {
  font-size: 0.2em;
  text-decoration: none;
  color: grey;
  position: fixed;
  bottom: 0;
  right: 0;
  width: auto;
}

.icon-attribution a {
  color: grey;

  text-decoration: none !important;
}

.black-footer {
  flex-grow: 1;
  width: 100%;
  overflow: hidden;
  display: block;
  position: relative;
}

.black-footer::after {
  content: "";
  background: url("toothpix-logo.jpeg");
  background-size: 4em;
  background-position-y: bottom;
  background-repeat: repeat-x;
  margin-bottom: 5px;
  opacity: 0.1;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: -1;
}

@media only screen and (max-width: 420px) {
  .page {
    display: flex;
    flex-direction: column;

    height: auto;
  }
  .left-container {
    display: flex;
    flex-grow: 1;
    flex-direction: column;
    min-width: 100%;
    order: 2;
  }
  .right-container {
    order: 1;
    flex-direction: column;
    display: flex;
  }
  .mobile-inspectedByContainer {
    display: flex;
    visibility: visible;
    background-color: #1a1818;
  }
  .mobile-inspectedByContainer > img {
    width: 100%;
    height: 70px;
  }

  .map-container {
    height: 25vh;
  }
  .sidebar-container {
    height: 55px;
    order: 3;

    /* height: 55px;
    order: 1; */
  }
  .inspectedByContainer {
    order: 2;
    display: flex;
    justify-content: center;
    min-height: 1px;
    margin-bottom: 2em;
  }
  .inspectedByContainer > img {
    display: none;
    visibility: hidden;
  }
  .inspectedByContainer > div {
    overflow: none;
  }
}

